--- a/public/style.css
+++ b/public/style.css
@@ -122,7 +122,7 @@ button:hover {
     padding: 0;
     margin: 0;
     max-height: 500px;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 #listaVeiculos li {
@@ -508,4 +508,5 @@ button:hover {
 }
 #capacidadeInput{
     width: 97%;
+
 }
